Settings are namespace.key.value all the way down
The seven blessed preset fields are gone: a settings preset is now the
namespace -> key -> value map the config reference describes, reaching any
option in the game's own registry by its options.txt key. Three humane
spellings (fieldOfView in degrees, particles and clouds by name) cover the
keys whose codec form is unreadable, and readback reports deviations in the
spelling the operator wrote. The forced-key refusal now names the real
registry keys - the old list refused "framerateLimit" while the actual key,
maxFps, walked past it. Chunk-stopped scenarios must pin
minecraft.renderDistance, since the target and send radius derive from it.
The reference config carries every reachable vanilla option, commented out
at its default, and the codec now accepts trailing commas.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>